packages/kyvernoPolicies/chart/tests/vpol/disallow-namespaces-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-default-ns
  namespace: default
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-bigbang-ns
  namespace: bigbang
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-default-ns
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob-default-ns
  namespace: default
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-myapp-ns
  namespace: myapp
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-myapp-ns
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
